--- a/style.css
+++ b/style.css
@@ -9,64 +9,66 @@ p {
 }
 
 .contenedor {
-    height: 500px;
-    width: 700px;
-    margin-top: 100px;
-    margin-bottom: 100px;
-    margin-right: 100px;
-    margin-left: 100px;
-    padding: 20px; 
+    height: 31.25rem;
+    width: 43.75rem;
+    margin-top: 6.25rem;
+    margin-bottom: 6.25rem;
+    margin-right: 6.25rem;
+    margin-left: 6.25rem;
+    padding: 1.25rem; 
     background-color: white;
 }
 
 header {
-    height: 100px;
-    width: 680px;
-    padding: 15px;  
+    height: 6.25rem;
+    width: 42.5rem;
+    padding: 0.93rem;  
     background-color: white;
 }
 
 .titulo {
-    height: 90px; 
-    width: 500px;
+    height: 5.625rem; 
+    width: 31.25rem;
     float: left;
     background-color: white;
 }
 
 .logo {
-    height: 60px; 
-    width: 150px;
-    padding: 15px; 
+    height: 3.75rem; 
+    width: 9.375rem;
+    padding: 0.93rem; 
     float: right;
     background: url(https://assets.breatheco.de/apis/img/icon/4geeks.png) no-repeat center;
     background-size: contain; 
 }
 
 section {
-    height: 250px;
-    width: 680px;
+    height: 15.625rem;
+    width: 42.5rem;
     padding: 15px;  
     background-color: white;
 }
 
 article {
-    height: 250px; 
-    width: 310px;
+    height: 15.625rem; 
+    width: 50%;
     float: left;
     background-color: white;
 }
 
 form {
-    margin-top: 20px;
-    height: 250px; 
-    width: 320px;
+    margin-top: 1.25rem;
+    height: 50%; 
+    width: 20rem;
     float: right;
     background-color: white;
 }
 
-footer {
-    height: 55px;
-    width: 720px;
+.buttonLayout {
+    margin-top: 7rem;
+    margin-left: -24rem;
+    height: 3.438rem;
+    width: 45rem;
     background-color: white;
 }
 
@@ -75,7 +77,7 @@ input {
     font-family: 'Philosopher', sans-serif;
     border: none; 
     border-bottom: 2px solid grey;
-    padding: 7px;
+    padding: 0.438rem;
 }
 
 i {
@@ -84,7 +86,7 @@ i {
 } 
 
 button {
-    margin-left: 260px;
+    margin-left: 16.25rem;
     position: center; 
     font-family: 'Philosopher', sans-serif;
     font-size: 1.4em;
